feat: ⬆️ update JGroups integration to version 3.x, replacing PullPushAdapter with SwarmChannelAdapter and adjusting dependencies in build.gradle