@@ -16,7 +16,6 @@
 package helma.swarm;
 
 import org.jgroups.*;
-import org.jgroups.blocks.PullPushAdapter;
 import org.w3c.dom.*;
 import helma.framework.core.Application;
 import helma.framework.repository.Repository;
@@ -27,28 +26,29 @@ import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.DocumentBuilder;
 import java.util.WeakHashMap;
 import java.util.Iterator;
+import java.util.List;
 import java.io.File;
 
 public class ChannelUtils {
 
-    // weak hashmap for pull-push-adapters
+    // weak hashmap for channel adapters (JGroups 3.x)
     static WeakHashMap adapters = new WeakHashMap();
 
-    // Ids for multiplexing PullPushAdapter.
-    // SwarmSessionManager acts as main listener so it can use state exchange. 
-    final static Integer CACHE = new Integer(1);
-    final static Integer IDGEN = new Integer(2);
+    // Ids for multiplexing.
+    // SwarmSessionManager acts as main listener so it can use state exchange.
+    final static Integer CACHE = Integer.valueOf(1);
+    final static Integer IDGEN = Integer.valueOf(2);
 
-    static PullPushAdapter getAdapter(Application app)
-            throws ChannelException {
-        PullPushAdapter adapter = (PullPushAdapter) adapters.get(app);
+    static SwarmChannelAdapter getAdapter(Application app)
+            throws Exception {
+        SwarmChannelAdapter adapter = (SwarmChannelAdapter) adapters.get(app);
 
         if (adapter == null) {
             SwarmConfig config = new SwarmConfig(app);
-            Channel channel = new JChannel(config.getJGroupsProps());
+            JChannel channel = new JChannel(config.getJGroupsProps());
             String groupName = app.getProperty("swarm.name", app.getName());
             channel.connect(groupName + "_swarm");
-            adapter = new PullPushAdapter(channel);
+            adapter = new SwarmChannelAdapter(channel, app);
             adapter.start();
             adapters.put(app, adapter);
         }
@@ -57,9 +57,9 @@ public class ChannelUtils {
     }
 
     static void stopAdapter(Application app) {
-        PullPushAdapter adapter = (PullPushAdapter) adapters.remove(app);
+        SwarmChannelAdapter adapter = (SwarmChannelAdapter) adapters.remove(app);
         if (adapter != null) {
-            Channel channel = (Channel) adapter.getTransport();
+            JChannel channel = adapter.getTransport();
             if (channel.isConnected())
                 channel.disconnect();
             if (channel.isOpen())
@@ -69,13 +69,14 @@ public class ChannelUtils {
     }
 
     public static boolean isMaster(Application app) {
-        PullPushAdapter adapter = (PullPushAdapter) adapters.get(app);
+        SwarmChannelAdapter adapter = (SwarmChannelAdapter) adapters.get(app);
         if (adapter != null) {
             try {
-                Channel channel = (Channel) adapter.getTransport();
+                JChannel channel = adapter.getTransport();
                 View view = channel.getView();
-                Address address = channel.getLocalAddress();
-                return address.equals(view.getMembers().firstElement());
+                Address address = channel.getAddress();
+                List<Address> members = view.getMembers();
+                return !members.isEmpty() && address.equals(members.get(0));
             } catch (Exception x) {
                 app.logError("ChannelUtils.isMaster()", x);
             }
@@ -86,6 +87,8 @@ public class ChannelUtils {
 
 class SwarmConfig {
 
+    // Default stack for JGroups 3.x (used when no swarm.conf or no matching stack).
+    // Aligns with the udp stack in swarm.conf (FRAG2, FD, VIEW_SYNC).
     String jGroupsProps =
             "UDP(mcast_addr=224.0.0.132;mcast_port=22024;ip_ttl=32;" +
                 "bind_port=48848;port_range=1000;" +
@@ -93,12 +96,14 @@ class SwarmConfig {
             "PING(timeout=2000;num_initial_members=3):" +
             "MERGE2(min_interval=5000;max_interval=10000):" +
             "FD_SOCK:" +
+            "FD(timeout=10000;max_tries=5;shun=true):" +
             "VERIFY_SUSPECT(timeout=1500):" +
             "pbcast.NAKACK(gc_lag=50;retransmit_timeout=300,600,1200,2400,4800):" +
             "UNICAST(timeout=5000):" +
             "pbcast.STABLE(desired_avg_gossip=20000):" +
-            "FRAG(frag_size=8096;down_thread=false;up_thread=false):" +
+            "VIEW_SYNC(avg_send_interval=60000):" +
             "pbcast.GMS(join_timeout=5000;join_retry_timeout=2000;shun=false;print_local_addr=true):" +
+            "FRAG2(frag_size=8192):" +
             "pbcast.STATE_TRANSFER";
 
     public SwarmConfig (Application app) {
